--- a/apptest.html
+++ b/apptest.html
@@ -11,12 +11,27 @@
 <script type="text/javascript" src="hitboxStruct.js"></script>
 <script type="text/javascript" src="charAttributes.js"></script>
 <script type="text/javascript" src="throwData.js"></script>
+<script src="apptestmathsgets.js" type="text/javascript"></script>
+<script src="apptestmathsfinds.js" type="text/javascript"></script>
 <script src="apptest.js" type="text/javascript"></script>
+<script src="..."></script>
 </head>
 <body>
 <div id="main">
+<div id="yourCalcMain" class="main">
+  <div id="yCalcTitle" class="title"><p>Your Calculations</p></div>
+  <div id="yCalcContainer">
+    <div id="yCalc1" class="yCalcItem"><div id="yCitemNum1" class="yCitemNum"><p>1</p></div><div class="yCitem1"><div class="yCitemsub1"><p>CC</p></div><div class="yCiSpacer"></div><div class="yCitemsub2"><p>ASDI</p></div><div class="yCiSpacer"></div><div class="yCitemsub3"><p>AT</p></div></div><div class="yCitem2"><p>Falcon<br>N-Special<br>on<br>Marth</p></div><div class="yCitem3"><div class="yCitemsub1"><p>65%</p></div><div class="yCiSpacer"></div><div class="yCitemsub1"><p>33%</p></div><div class="yCiSpacer"></div><div class="yCitemsub1"><p>123%</p></div></div><div class="yCresults"><p>></p></div></div>
+    <div class="yCalcItemSpacer"></div>
+    <div id="yCalc2" class="yCalcItem"><div id="yCitemNum2" class="yCitemNum"><p>2</p></div><div class="yCitem1"><div class="yCitemsub1"><p>CC</p></div><div class="yCiSpacer"></div><div class="yCitemsub2"><p>ASDI</p></div><div class="yCiSpacer"></div><div class="yCitemsub3"><p>AT</p></div></div><div class="yCitem2"><p>Marth<br>F-Smash<br>on<br>Fox</p></div><div class="yCitem3"><div class="yCitemsub1"><p>35%</p></div><div class="yCiSpacer"></div><div class="yCitemsub1"><p>14%</p></div><div class="yCiSpacer"></div><div class="yCitemsub1"><p>97%</p></div></div><div class="yCresults"><p>></p></div></div>
+    <div class="yCalcItemSpacer"></div>
+    <div id="yCalc3" class="yCalcItem"><div id="yCitemNum3" class="yCitemNum"><p>3</p></div><div class="yCitem1"><div class="yCitemsub1"><p>Kill%</p></div><div class="yCiSpacer"></div><div class="yCitemsub2"><p>FoD</p></div><div class="yCiSpacer"></div><div class="yCitemsub3"><p class="coordinates">X:<span class="smalltext">-167.7</span><br>Y:<span class="smalltext">56.6</span></p></div></div><div class="yCitem2"><p>Marth<br>F-Smash<br>on<br>Fox</p></div><div class="yCitem3"><div class="yCitemsub1"><p><span class="smalltext">NoDI </span>115%</p></div><div class="yCiSpacer"></div><div class="yCitemsub1"><p><span class="smalltext">P-DI </span>143%</p></div><div class="yCiSpacer"></div><div class="yCitemsub1"><p><span class="smalltext">B-DI </span>91%</p></div></div><div class="yCresults"><p>></p></div></div>
+
+</div>
+  <div id="newCalc"><p>New Calculation <span id="newCalcPlus">+</span></p></div>
+</div>
 <div id="taskMain" class="main">
-  <div id="taskTitle" class="title"><p>Select Task</p></div>
+  <div id="taskTitle" class="title"><p>Select Calculation</p></div>
   <div id="crouchCancelTask" class="taskButton"><p>How long can I Crouch-Cancel/ASDI-down/Amsah-Tech .... ?</p></div>
   <div id="killTask" class="taskButton"><p>When will .... kill ?</p></div>
   <div id="shieldstunTask" class="taskButton"><p>How much Shield Stun does .... have ?</p></div>
