--- a/calculatorsecretbeta.html
+++ b/calculatorsecretbeta.html
@@ -49,7 +49,7 @@
 
 </div>
 <div id="pagetitle" style="background-color:#df9440">
-<img id="homebutton" class="hometrans" src="assets/kneesmalllogo.png" width="40" height="40"/><h1>Melee Calculator</h1><div id="tutorialbutton" class="tutorialbuttondefault"><div id="tutorialicon"></div><p>Tutorial</p></div><p id="credits">by Schmoo and GentleFox  v1.0</p><div id="titlebarButtons"><a href="donate.html"><div id="donatebutton" class="donatebuttondefault"><div id="dollarbox"><p>$</p></div><p>Donate</p></div></a><div id="versionButtonContainer"><div id="NTSCButton" class="verButton verButtonOn"><p>NTSC</p></div><div id="PALButton" class="verButton"><p>PAL</p></div></div></div>
+<img id="homebutton" class="hometrans" src="assets/kneesmalllogo.png" width="40" height="40"/><h1>Melee Calculator</h1><div id="tutorialbutton" class="tutorialbuttondefault"><div id="tutorialicon"></div><p>Tutorial</p></div><p id="credits">by Schmoo and GentleFox  v1.9.beta</p><div id="titlebarButtons"><a href="donate.html"><div id="donatebutton" class="donatebuttondefault"><div id="dollarbox"><p>$</p></div><p>Donate</p></div></a><div id="versionButtonContainer"><div id="NTSCButton" class="verButton verButtonOn"><p>NTSC</p></div><div id="PALButton" class="verButton"><p>PAL</p></div></div></div>
 
 </div><div id="main">
 <div id="lcontrols"><div id="attackertitle"><p>ATTACKER</p></div><div id="attackscroll"><div id="Fx" class="character"><div class="expandcharacter expandfalse"></div><p>Fox</p></div>
