--- a/meleelitebeta.html
+++ b/meleelitebeta.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <script src="jquery-1.11.3.min.js" type="text/javascript"></script>
-    <script src="howler.min.js" type="text/javascript"></script>
+    <script src="howler.js" type="text/javascript"></script>
     <script src="animationsArray2.js" type="text/javascript"></script>
     <script src="main.min.js" type="text/javascript"></script>
     <link href="fighter.min.css" rel="stylesheet"/>
@@ -59,7 +59,191 @@
     </div>-->
 
   </div>
-      <div id="keyboardButton"><p>Show Keyboard Controls</p><img id="keyboardControlsImg" src="keyboardcontrols.png"/></div>
+  <div id="topButtonContainer">
+      <div id="keyboardButton" class="topButton"><p>Keyboard Controls</p><img id="keyboardControlsImg" width="860" height="616" src="http://i.imgur.com/vdfvaII.png"/></div><div id="controllerButton" class="topButton"><p>Controller Support</p><div id="controllerSupportContainer">
+        <div class="controllerBox">
+          <div class="controllerName"><p>MayFlash 2-Port</p></div>
+          <div class="controllerDriver"><p><span class="native">Native</span></p></div>
+          <div class="controllerBrowser">
+            <div class="browserBox">
+              <div class="browserImg"><img class="browserImgFile" src="assets/browser-icons/chrome.png"/></div>
+              <div class="browserSupport"><p><span class="tick">✔</span></p></div>
+            </div><!--
+            --><div class="browserBox">
+              <div class="browserImg"><img class="browserImgFile" src="assets/browser-icons/firefox.png"/></div>
+              <div class="browserSupport"><p><span class="tick">✔</span></p></div>
+            </div><!--
+            --><div class="browserBox">
+              <div class="browserImg"><img class="browserImgFile" src="assets/browser-icons/safari.png"/></div>
+              <div class="browserSupport"><p><span class="unknown">?</span></p></div>
+            </div><!--
+            --><div class="browserBox">
+              <div class="browserImg"><img class="browserImgFile" src="assets/browser-icons/edge.png"/></div>
+              <div class="browserSupport"><p><span class="unknown">?</span></p></div>
+            </div>
+          </div>
+          <div class="controllerOS">
+            <div class="osBox osBoxWide">
+              <div class="osName osNameWide"><p>Windows</p></div>
+              <div Class="osSupport"><p><span class="tick">✔</span></p></div>
+            </div><!--
+            --><div class="osBox osBoxShort">
+              <div class="osName osNameShort"><p>Mac</p></div>
+              <div Class="osSupport"><p><span class="unknown">?</span></p></div>
+            </div><!--
+            --><div class="osBox osBoxShort">
+              <div class="osName osNameShort"><p>Linux</p></div>
+              <div Class="osSupport"><p><span class="unknown">?</span></p></div>
+            </div>
+          </div>
+        </div>
+        <div class="controllerBox">
+          <div class="controllerName"><p>MayFlash 4-Port</p></div>
+          <div class="controllerDriver"><p><span class="native">Native</span> (PC Mode)</p></div>
+          <div class="controllerBrowser">
+            <div class="browserBox">
+              <div class="browserImg"><img class="browserImgFile" src="assets/browser-icons/chrome.png"/></div>
+              <div class="browserSupport"><p><span class="tick">✔</span></p></div>
+            </div><!--
+            --><div class="browserBox">
+              <div class="browserImg"><img class="browserImgFile" src="assets/browser-icons/firefox.png"/></div>
+              <div class="browserSupport"><p><span class="tick">✔</span></p></div>
+            </div><!--
+            --><div class="browserBox">
+              <div class="browserImg"><img class="browserImgFile" src="assets/browser-icons/safari.png"/></div>
+              <div class="browserSupport"><p><span class="unknown">?</span></p></div>
+            </div><!--
+            --><div class="browserBox">
+              <div class="browserImg"><img class="browserImgFile" src="assets/browser-icons/edge.png"/></div>
+              <div class="browserSupport"><p><span class="unknown">?</span></p></div>
+            </div>
+          </div>
+          <div class="controllerOS">
+            <div class="osBox osBoxWide">
+              <div class="osName osNameWide"><p>Windows</p></div>
+              <div Class="osSupport"><p><span class="tick">✔</span></p></div>
+            </div><!--
+            --><div class="osBox osBoxShort">
+              <div class="osName osNameShort"><p>Mac</p></div>
+              <div Class="osSupport"><p><span class="unknown">?</span></p></div>
+            </div><!--
+            --><div class="osBox osBoxShort">
+              <div class="osName osNameShort"><p>Linux</p></div>
+              <div Class="osSupport"><p><span class="unknown">?</span></p></div>
+            </div>
+          </div>
+        </div>
+        <div class="controllerBox">
+          <div class="controllerName"><p>Official Nintendo Wii U</p></div>
+          <div class="controllerDriver"><p><span class="driver"><a href="http://m4sv.com/page/wii-u-gcn-usb-driver">vJoy Driver</a></span></p></div>
+          <div class="controllerBrowser">
+            <div class="browserBox">
+              <div class="browserImg"><img class="browserImgFile" src="assets/browser-icons/chrome.png"/></div>
+              <div class="browserSupport"><p><span class="cross">X</span></p></div>
+            </div><!--
+            --><div class="browserBox">
+              <div class="browserImg"><img class="browserImgFile" src="assets/browser-icons/firefox.png"/></div>
+              <div class="browserSupport"><p><span class="tick">✔</span></p></div>
+            </div><!--
+            --><div class="browserBox">
+              <div class="browserImg"><img class="browserImgFile" src="assets/browser-icons/safari.png"/></div>
+              <div class="browserSupport"><p><span class="unknown">?</span></p></div>
+            </div><!--
+            --><div class="browserBox">
+              <div class="browserImg"><img class="browserImgFile" src="assets/browser-icons/edge.png"/></div>
+              <div class="browserSupport"><p><span class="unknown">?</span></p></div>
+            </div>
+          </div>
+          <div class="controllerOS">
+            <div class="osBox osBoxWide">
+              <div class="osName osNameWide"><p>Windows</p></div>
+              <div Class="osSupport"><p><span class="tick">✔</span></p></div>
+            </div><!--
+            --><div class="osBox osBoxShort">
+              <div class="osName osNameShort"><p>Mac</p></div>
+              <div Class="osSupport"><p><span class="unknown">?</span></p></div>
+            </div><!--
+            --><div class="osBox osBoxShort">
+              <div class="osName osNameShort"><p>Linux</p></div>
+              <div Class="osSupport"><p><span class="unknown">?</span></p></div>
+            </div>
+          </div>
+        </div>
+        <div class="controllerBox">
+          <div class="controllerName"><p>Raphnet</p></div>
+          <div class="controllerDriver"><p><span class="native">Native</span></p></div>
+          <div class="controllerBrowser">
+            <div class="browserBox">
+              <div class="browserImg"><img class="browserImgFile" src="assets/browser-icons/chrome.png"/></div>
+              <div class="browserSupport"><p><span class="tick">✔</span></p></div>
+            </div><!--
+            --><div class="browserBox">
+              <div class="browserImg"><img class="browserImgFile" src="assets/browser-icons/firefox.png"/></div>
+              <div class="browserSupport"><p><span class="tick">✔</span></p></div>
+            </div><!--
+            --><div class="browserBox">
+              <div class="browserImg"><img class="browserImgFile" src="assets/browser-icons/safari.png"/></div>
+              <div class="browserSupport"><p><span class="unknown">?</span></p></div>
+            </div><!--
+            --><div class="browserBox">
+              <div class="browserImg"><img class="browserImgFile" src="assets/browser-icons/edge.png"/></div>
+              <div class="browserSupport"><p><span class="unknown">?</span></p></div>
+            </div>
+          </div>
+          <div class="controllerOS">
+            <div class="osBox osBoxWide">
+              <div class="osName osNameWide"><p>Windows</p></div>
+              <div Class="osSupport"><p><span class="tick">✔</span></p></div>
+            </div><!--
+            --><div class="osBox osBoxShort">
+              <div class="osName osNameShort"><p>Mac</p></div>
+              <div Class="osSupport"><p><span class="unknown">?</span></p></div>
+            </div><!--
+            --><div class="osBox osBoxShort">
+              <div class="osName osNameShort"><p>Linux</p></div>
+              <div Class="osSupport"><p><span class="unknown">?</span></p></div>
+            </div>
+          </div>
+        </div>
+        <div class="controllerBox">
+          <div class="controllerName"><p>Xbox 360 Controller</p></div>
+          <div class="controllerDriver"><p><span class="native">Native</span></p></div>
+          <div class="controllerBrowser">
+            <div class="browserBox">
+              <div class="browserImg"><img class="browserImgFile" src="assets/browser-icons/chrome.png"/></div>
+              <div class="browserSupport"><p><span class="tick">✔</span></p></div>
+            </div><!--
+            --><div class="browserBox">
+              <div class="browserImg"><img class="browserImgFile" src="assets/browser-icons/firefox.png"/></div>
+              <div class="browserSupport"><p><span class="tick">✔</span></p></div>
+            </div><!--
+            --><div class="browserBox">
+              <div class="browserImg"><img class="browserImgFile" src="assets/browser-icons/safari.png"/></div>
+              <div class="browserSupport"><p><span class="unknown">?</span></p></div>
+            </div><!--
+            --><div class="browserBox">
+              <div class="browserImg"><img class="browserImgFile" src="assets/browser-icons/edge.png"/></div>
+              <div class="browserSupport"><p><span class="unknown">?</span></p></div>
+            </div>
+          </div>
+          <div class="controllerOS">
+            <div class="osBox osBoxWide">
+              <div class="osName osNameWide"><p>Windows</p></div>
+              <div Class="osSupport"><p><span class="tick">✔</span></p></div>
+            </div><!--
+            --><div class="osBox osBoxShort">
+              <div class="osName osNameShort"><p>Mac</p></div>
+              <div Class="osSupport"><p><span class="unknown">?</span></p></div>
+            </div><!--
+            --><div class="osBox osBoxShort">
+              <div class="osName osNameShort"><p>Linux</p></div>
+              <div Class="osSupport"><p><span class="unknown">?</span></p></div>
+            </div>
+          </div>
+        </div>
+        <div id="controllerMessage"><p>You may need to refresh the page or restart your browser. Close the browser from the system tray to be thorough</p></div>
+      </div></div>
+    </div>
     <div id="players">
     <div class="playerDetails">
       <div class="playerTitle"><p>Player 1</p></div>
