--- a/meleelitebeta.html
+++ b/meleelitebeta.html
@@ -11,53 +11,13 @@
     <div id="display">
     <canvas id="gameCanvas" width="1200" height ="750"></canvas>
     <div id="tagTextContainer"><textarea id="pTagEdit0" class="pTagEdit" maxlength="10"></textarea><textarea id="pTagEdit1" class="pTagEdit" maxlength="10"></textarea><textarea id="pTagEdit2" class="pTagEdit" maxlength="10"></textarea><textarea id="pTagEdit3" class="pTagEdit" maxlength="10"></textarea></div>
+    <div id="customStageContainer"><div id="cStageTitle"><p>Give this to schmoo</p></div><textarea id="cStageEdit"></textarea><div id="cStagePrompt"><p>Press A to close</p></div></div>
     <div id="debug">
       <div id="renderingTime"><p>Rendering: avg: <span id="renderAvg">0</span>ms | high: <span id="renderHigh">0</span>ms | low :<span id="renderLow">0</span>ms | PeakCount: <span id="renderPeak">0</span></p></div>
       <div id="gamelogicTime"><p>GameLogic: avg: <span id="gamelogicAvg">0</span>ms | high: <span id="gamelogicHigh">0</span>ms | low :<span id="gamelogicLow">0</span>ms | PeakCount: <span id="gamelogicPeak">0</span></p></div>
       <div id="framerate"><p>Framerate: cur: <span id="framerateCurrent">0</span>fps | high : <span id="framerateHigh">0</span>fps | low : <span id="framerateLow">0</span>fps</p></div>
     </div>
-    <div id="matchTimer"><p><span id="matchMinutes">8</span>:<span id="matchSeconds">00.00</span></p></div>
-    <div id="stockPercentContainer">
-      <div id="sP0" class="stockPercent">
-        <div id="resetIndicator0" class="resetIndicator"><p>RESET!</p></div>
-        <div id="stockContainer0" class="stockContainer">
-          <div class="stock 0stock" id="0stock1"></div><div class="stock 0stock" id="0stock2"></div><div class="stock 0stock" id="0stock3"></div><div class="stock 0stock" id="0stock4"></div>
-        </div>
-        <div id="percentContainer0" class="percentContainer">
-          <p class="percent"><span id="percent0">999</span>%</p>
-        </div>
-      </div><div id="sP1" class="stockPercent">
-        <div id="resetIndicator1" class="resetIndicator"><p>RESET!</p></div>
-        <div id="stockContainer1" class="stockContainer">
-          <div class="stock 1stock" id="1stock1"></div><div class="stock 1stock" id="1stock2"></div><div class="stock 1stock" id="1stock3"></div><div class="stock 1stock" id="1stock4"></div>
-        </div>
-        <div id="percentContainer1" class="percentContainer">
-          <p class="percent"><span id="percent1">0</span>%</p>
-        </div>
-      </div><div id="sP2" class="stockPercent">
-        <div id="resetIndicator2" class="resetIndicator"><p>RESET!</p></div>
-        <div id="stockContainer2" class="stockContainer">
-          <div class="stock 2stock" id="2stock1"></div><div class="stock 2stock" id="2stock2"></div><div class="stock 2stock" id="2stock3"></div><div class="stock 2stock" id="2stock4"></div>
-        </div>
-        <div id="percentContainer2" class="percentContainer">
-          <p class="percent"><span id="percent2">0</span>%</p>
-        </div>
-      </div><div id="sP3" class="stockPercent">
-        <div id="resetIndicator3" class="resetIndicator"><p>RESET!</p></div>
-        <div id="stockContainer3" class="stockContainer">
-          <div class="stock 3stock" id="3stock1"></div><div class="stock 3stock" id="3stock2"></div><div class="stock 3stock" id="3stock3"></div><div class="stock 3stock" id="3stock4"></div>
-        </div>
-        <div id="percentContainer3" class="percentContainer">
-          <p class="percent"><span id="percent3">0</span>%</p>
-        </div>
-      </div>
-    </div>
-    <div id="buttons"><div id="effectsButton" class="button"><p>VFX <span id="effectsButtonEdit">ON</span></p></div><div id="debugButton" class="button"><p>DEBUG <span id="debugButtonEdit">OFF</span></p></div></div>
-    <!--<div id="playerFind">
-      <div id="currentPlayers"></div>
-      <div id="pFindDetails"><p>Press A to Join<br><br>Press X/Y to Change Colour<br><br>Press B to Toggle Tag<br><br>Press Z to Add CPU<br><br>Press Start to Enter Battle<br><br><br><span style="font-size:14px">Hold DpadUp + X + Y for 3 seconds when in game to reset controller (for trigger tricking)<br>Press DpadLeft to Toggle LedgeGrabBox<br>Press DpadDown to Toggle ECB<br>Press DpadRight to Toggle Hitboxes</span></p></div>
-    </div>-->
-
+    <div id="buttons"><div id="effectsButton" class="button"><p>VFX <span id="effectsButtonEdit">ON</span></p></div><div id="debugButton" class="button"><p>DEBUG <span id="debugButtonEdit">OFF</span></p></div><div id="fpsButton" class="button"><p><span id="fpsButtonEdit">60</span>fps</p></div></div>
   </div>
   <div id="topButtonContainer">
       <div id="keyboardButton" class="topButton"><p>Keyboard Controls</p><img id="keyboardControlsImg" width="860" height="616" src="http://i.imgur.com/vdfvaII.png"/></div><div id="controllerButton" class="topButton"><p>Controller Support</p><div id="controllerSupportContainer">
@@ -68,16 +28,13 @@
             <div class="browserBox">
               <div class="browserImg"><img class="browserImgFile" src="assets/browser-icons/chrome.png"/></div>
               <div class="browserSupport"><p><span class="tick">✔</span></p></div>
-            </div><!--
-            --><div class="browserBox">
+            </div><div class="browserBox">
               <div class="browserImg"><img class="browserImgFile" src="assets/browser-icons/firefox.png"/></div>
               <div class="browserSupport"><p><span class="tick">✔</span></p></div>
-            </div><!--
-            --><div class="browserBox">
+            </div><div class="browserBox">
               <div class="browserImg"><img class="browserImgFile" src="assets/browser-icons/safari.png"/></div>
               <div class="browserSupport"><p><span class="unknown">?</span></p></div>
-            </div><!--
-            --><div class="browserBox">
+            </div><div class="browserBox">
               <div class="browserImg"><img class="browserImgFile" src="assets/browser-icons/edge.png"/></div>
               <div class="browserSupport"><p><span class="unknown">?</span></p></div>
             </div>
@@ -86,12 +43,10 @@
             <div class="osBox osBoxWide">
               <div class="osName osNameWide"><p>Windows</p></div>
               <div Class="osSupport"><p><span class="tick">✔</span></p></div>
-            </div><!--
-            --><div class="osBox osBoxShort">
+            </div><div class="osBox osBoxShort">
               <div class="osName osNameShort"><p>Mac</p></div>
               <div Class="osSupport"><p><span class="unknown">?</span></p></div>
-            </div><!--
-            --><div class="osBox osBoxShort">
+            </div><div class="osBox osBoxShort">
               <div class="osName osNameShort"><p>Linux</p></div>
               <div Class="osSupport"><p><span class="unknown">?</span></p></div>
             </div>
@@ -104,16 +59,13 @@
             <div class="browserBox">
               <div class="browserImg"><img class="browserImgFile" src="assets/browser-icons/chrome.png"/></div>
               <div class="browserSupport"><p><span class="tick">✔</span></p></div>
-            </div><!--
-            --><div class="browserBox">
+            </div><div class="browserBox">
               <div class="browserImg"><img class="browserImgFile" src="assets/browser-icons/firefox.png"/></div>
               <div class="browserSupport"><p><span class="tick">✔</span></p></div>
-            </div><!--
-            --><div class="browserBox">
+            </div><div class="browserBox">
               <div class="browserImg"><img class="browserImgFile" src="assets/browser-icons/safari.png"/></div>
               <div class="browserSupport"><p><span class="unknown">?</span></p></div>
-            </div><!--
-            --><div class="browserBox">
+            </div><div class="browserBox">
               <div class="browserImg"><img class="browserImgFile" src="assets/browser-icons/edge.png"/></div>
               <div class="browserSupport"><p><span class="unknown">?</span></p></div>
             </div>
@@ -122,12 +74,10 @@
             <div class="osBox osBoxWide">
               <div class="osName osNameWide"><p>Windows</p></div>
               <div Class="osSupport"><p><span class="tick">✔</span></p></div>
-            </div><!--
-            --><div class="osBox osBoxShort">
+            </div><div class="osBox osBoxShort">
               <div class="osName osNameShort"><p>Mac</p></div>
               <div Class="osSupport"><p><span class="unknown">?</span></p></div>
-            </div><!--
-            --><div class="osBox osBoxShort">
+            </div><div class="osBox osBoxShort">
               <div class="osName osNameShort"><p>Linux</p></div>
               <div Class="osSupport"><p><span class="unknown">?</span></p></div>
             </div>
@@ -140,16 +90,13 @@
             <div class="browserBox">
               <div class="browserImg"><img class="browserImgFile" src="assets/browser-icons/chrome.png"/></div>
               <div class="browserSupport"><p><span class="cross">X</span></p></div>
-            </div><!--
-            --><div class="browserBox">
+            </div><div class="browserBox">
               <div class="browserImg"><img class="browserImgFile" src="assets/browser-icons/firefox.png"/></div>
               <div class="browserSupport"><p><span class="tick">✔</span></p></div>
-            </div><!--
-            --><div class="browserBox">
+            </div><div class="browserBox">
               <div class="browserImg"><img class="browserImgFile" src="assets/browser-icons/safari.png"/></div>
               <div class="browserSupport"><p><span class="unknown">?</span></p></div>
-            </div><!--
-            --><div class="browserBox">
+            </div><div class="browserBox">
               <div class="browserImg"><img class="browserImgFile" src="assets/browser-icons/edge.png"/></div>
               <div class="browserSupport"><p><span class="unknown">?</span></p></div>
             </div>
@@ -158,12 +105,10 @@
             <div class="osBox osBoxWide">
               <div class="osName osNameWide"><p>Windows</p></div>
               <div Class="osSupport"><p><span class="tick">✔</span></p></div>
-            </div><!--
-            --><div class="osBox osBoxShort">
+            </div><div class="osBox osBoxShort">
               <div class="osName osNameShort"><p>Mac</p></div>
               <div Class="osSupport"><p><span class="unknown">?</span></p></div>
-            </div><!--
-            --><div class="osBox osBoxShort">
+            </div><div class="osBox osBoxShort">
               <div class="osName osNameShort"><p>Linux</p></div>
               <div Class="osSupport"><p><span class="unknown">?</span></p></div>
             </div>
@@ -176,16 +121,13 @@
             <div class="browserBox">
               <div class="browserImg"><img class="browserImgFile" src="assets/browser-icons/chrome.png"/></div>
               <div class="browserSupport"><p><span class="tick">✔</span></p></div>
-            </div><!--
-            --><div class="browserBox">
+            </div><div class="browserBox">
               <div class="browserImg"><img class="browserImgFile" src="assets/browser-icons/firefox.png"/></div>
               <div class="browserSupport"><p><span class="tick">✔</span></p></div>
-            </div><!--
-            --><div class="browserBox">
+            </div><div class="browserBox">
               <div class="browserImg"><img class="browserImgFile" src="assets/browser-icons/safari.png"/></div>
               <div class="browserSupport"><p><span class="unknown">?</span></p></div>
-            </div><!--
-            --><div class="browserBox">
+            </div><div class="browserBox">
               <div class="browserImg"><img class="browserImgFile" src="assets/browser-icons/edge.png"/></div>
               <div class="browserSupport"><p><span class="unknown">?</span></p></div>
             </div>
@@ -194,12 +136,10 @@
             <div class="osBox osBoxWide">
               <div class="osName osNameWide"><p>Windows</p></div>
               <div Class="osSupport"><p><span class="tick">✔</span></p></div>
-            </div><!--
-            --><div class="osBox osBoxShort">
+            </div><div class="osBox osBoxShort">
               <div class="osName osNameShort"><p>Mac</p></div>
               <div Class="osSupport"><p><span class="unknown">?</span></p></div>
-            </div><!--
-            --><div class="osBox osBoxShort">
+            </div><div class="osBox osBoxShort">
               <div class="osName osNameShort"><p>Linux</p></div>
               <div Class="osSupport"><p><span class="unknown">?</span></p></div>
             </div>
@@ -207,21 +147,18 @@
         </div>
         <div class="controllerBox">
           <div class="controllerName"><p>Xbox 360 Controller</p></div>
-          <div class="controllerDriver"><p><span class="native">Native</span></p></div>
+          <div class="controllerDriver"><p><span class="driver">Coming Soon</span></p></div>
           <div class="controllerBrowser">
             <div class="browserBox">
               <div class="browserImg"><img class="browserImgFile" src="assets/browser-icons/chrome.png"/></div>
               <div class="browserSupport"><p><span class="tick">✔</span></p></div>
-            </div><!--
-            --><div class="browserBox">
+            </div><div class="browserBox">
               <div class="browserImg"><img class="browserImgFile" src="assets/browser-icons/firefox.png"/></div>
               <div class="browserSupport"><p><span class="tick">✔</span></p></div>
-            </div><!--
-            --><div class="browserBox">
+            </div><div class="browserBox">
               <div class="browserImg"><img class="browserImgFile" src="assets/browser-icons/safari.png"/></div>
               <div class="browserSupport"><p><span class="unknown">?</span></p></div>
-            </div><!--
-            --><div class="browserBox">
+            </div><div class="browserBox">
               <div class="browserImg"><img class="browserImgFile" src="assets/browser-icons/edge.png"/></div>
               <div class="browserSupport"><p><span class="unknown">?</span></p></div>
             </div>
@@ -230,12 +167,10 @@
             <div class="osBox osBoxWide">
               <div class="osName osNameWide"><p>Windows</p></div>
               <div Class="osSupport"><p><span class="tick">✔</span></p></div>
-            </div><!--
-            --><div class="osBox osBoxShort">
+            </div><div class="osBox osBoxShort">
               <div class="osName osNameShort"><p>Mac</p></div>
               <div Class="osSupport"><p><span class="unknown">?</span></p></div>
-            </div><!--
-            --><div class="osBox osBoxShort">
+            </div><div class="osBox osBoxShort">
               <div class="osName osNameShort"><p>Linux</p></div>
               <div Class="osSupport"><p><span class="unknown">?</span></p></div>
             </div>
